# algoritmit-harjoitustyo

./: .coverage  .coveragerc  .gitignore  README.md  a_star_profile.txt  djikstra_profile.txt  fringe_search_profile.txt  index.py.lprof  log.txt  määrittelydokumentti.md  pyproject.toml  tasks.py  test_logger.txt
dokumentaatio/: Käyttöohje.md  Testausdokumentti.md  Toteutusdokumentti.md  Viikkoraportti_2.md  Viikkoraportti_3 copy.md  Viikkoraportti_4.md  määrittelydokumentti.md  viikkoraportti_1.md
dokumentaatio/profiilit/: a_star.txt  djikstra.txt  fringe_search.txt
dokumentaatio/raportit/: Viikkoraportti_2.md  Viikkoraportti_3.md  Viikkoraportti_4.md  Viikkoraportti_5.md  Viikkoraportti_6.md  Viikkoraportti_7.md
src/: a_star.py  a_star2.py  a_star_3.py  a_star_class.py  algorithm_handler.py  cell.py  developer_functions.py  doubly_linked_list.py  drawing_funcitons.py  dumb_intex.py  fringe_search.py  get_grid.py  height_mapping_function.py  heurestic_function.py  heurestic_test.py  high_map_func.py  index.py  kokeilu.py  main.py  new_astar.py  new_fringe.py  node.py  node_map.py  show_map.py
src/algorithms/: a_star.py  fringe_search.py  new_a_star.py  new_fringe_search.py
src/drawing_functions/: draw_path.py  draw_plain.py  draw_plots.py  draw_point_map.py
src/functions/: a_star.py  fringe_search.py  height_mapping.py  heurestic.py  two_d_heurestic.py
src/map_generation/: get_shape.py  node_list_generator.py  shape_functions.py  translator.py  two_d_translator.py
src/objects/: doubly_linked_list.py  node.py  two_d_node.py
src/tests/: a_start_test.py  (+15 more)
(+15 files in other folders)
