[tool.poetry]
name = "algoritmit-harjiotusty-"
version = "0.1.0"
description = ""
authors = ["levitesuo <leevi.suotula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^2.2.0"
perlin-noise = "^1.12"
plotly = "^5.20.0"
numpy = "^1.26.4"
coverage = "^7.4.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pylint = "^3.1.0"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
